--- a/package.json
+++ b/package.json
@@ -3,17 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "install": "^0.12.2",
-    "jsdom": "^13.0.0",
-    "npm": "^6.4.1",
+    "@iota/converter": "^1.0.0-beta.6",
+    "@iota/core": "^1.0.0-beta.6",
     "qrcode-react": "^0.1.16",
-    "qrcode.react": "^0.8.0",
     "react": "^16.6.0",
-    "react-art-svg-renderer": "0.0.1-rc.8",
     "react-dom": "^16.6.0",
-    "react-native-qrcode-svg": "^5.1.1",
-    "react-native-svg": "^8.0.8",
-    "react-qr-code": "^0.1.2",
     "react-scripts": "2.1.1"
   },
   "scripts": {
@@ -30,5 +24,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "@iota/http-client": "^1.0.0-beta.6",
+    "babel-register": "^6.26.0"
+  }
 }
